# atcoder

./: .gitignore  c.cpp  c.out
UTPC/: c.cpp
UTPC/UTPC2021/: \  a.cpp  b.cpp  b.out  c.cpp  c.out
abc/: \  c.cpp  c.out
abc/abc100/: B.cpp  C.cpp  a.out
abc/abc101/: B.cpp  C.cpp  a.out
abc/abc102/: B.cpp
abc/abc103/: B.cpp  C.cpp  a.out
abc/abc104/: B.cpp
abc/abc105/: B.cpp
abc/abc106/: B.cpp  C.cpp  a.out
abc/abc107/: B.cpp  ]
abc/abc108/: B.cpp
abc/abc109/: B.cpp  c.cpp  c.out
abc/abc110/: B.cpp
abc/abc111/: B.cpp
abc/abc112/: B.cpp
abc/abc113/: A.cpp  B.cpp  C.cpp
abs/: 3.py  test.py
abs/go/: 0  (+21 more)
abs/rust/abs/: Cargo.toml
abs/rust/abs/src/: main_0.rs  main_1.rs  main_2.rs  main_3.rs  main_4.rs  main_5.rs  main_6.rs  main_7.rs  main_8.rs
agc/: a.out
apg4b/: 112.cpp  113.cpp  114.cpp  201.cpp  202.cpp  204.cpp  a.out  ex3.cpp
bacha/: 1.out  2.out  3.cpp  3.out  4.out  5.out  6.cpp  6.out
bs/: 01.go  02.go  03.go  04.go  05.go  06.go  07.go  08.go  09.go  10.go  11.go  go.mod
cargoCompete/: compete.toml
edcp/: A.cpp  A.out  B.out  C.out  D.out  E.cpp  ]
edpc/: a.java  b.cpp  c.cpp  d.cpp  e.cpp  e.out  f  f.cpp  f.out
seisen/: 1.out  2.cpp  2.out  3.cpp  3.out  4.cpp  4.out  6.cpp  6.out  7.cpp  8.cpp  tes.out
seisen100/: .~lock.sinchoku.ods#  10  11  11.go  12  12.go  13  13.go  14.go  15  15.go  16  16.go  17  17.go  18  18.go  19.go  20  20.go  5.cpp  5.out  6.cpp  7  7.go  8  8.go  9  9.go  Main.java  \  gotmp  sinchoku.css  sinchoku.html  sinchoku.ods
typical90/: 004.cpp  go.mod
typicaldp/: a.cpp  a.out  b.cpp
(+924 files in other folders)
