[package]
name = "abs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proconio = "0.4.3"

[[bin]]
name = "main_0"
path = "src/main_0.rs"

[[bin]]
name = "main_1"
path = "src/main_1.rs"

[[bin]]
name = "main_2"
path = "src/main_2.rs"

[[bin]]
name = "main_3"
path = "src/main_3.rs"

[[bin]]
name = "main_4"
path = "src/main_4.rs"

[[bin]]
name = "main_5"
path = "src/main_5.rs"

[[bin]]
name = "main_6"
path = "src/main_6.rs"

[[bin]]
name = "main_7"
path = "src/main_7.rs"
